cmake_minimum_required(VERSION 3.1)
project(co)
if(MSVC)
  enable_language(C CXX ASM_MASM)
else()
  enable_language(C CXX ASM)
endif()

set(CMAKE_CXX_STANDARD 11)
option(${PROJECT_NAME}_BUILD_SHARED "Let us build static libs" OFF)

set(BUILD_SHARED_LIBS ${${PROJECT_NAME}_BUILD_SHARED})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_DEBUG_POSTFIX "d")

if(UNIX)
  add_compile_options(-Wall -O2 -g3)
  if(APPLE)
    add_compile_options(-fno-pie)
  endif()
  if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-fPIC)
  endif()
endif()

if(MSVC)
  add_compile_options(/W4 /fp:fast /EHsc)
  add_link_options(/SAFESEH:NO)
endif()

add_subdirectory(base)

option(${PROJECT_NAME}_BUILD_RPCGEN "To build rpcgen" ON)
if(${PROJECT_NAME}_BUILD_RPCGEN)
  message("To build rpcgen" )
  add_subdirectory(rpcgen)
endif()

option(${PROJECT_NAME}_BUILD_UNITEST "To build unitest" OFF)
if(${PROJECT_NAME}_BUILD_UNITEST)
  message("To build unitest" )
  add_subdirectory(unitest/base)
endif()

option(${PROJECT_NAME}_BUILD_TEST "To build test" OFF)
if(${PROJECT_NAME}_BUILD_TEST)
  message("To build test" )
  add_subdirectory(test)
endif()

get_directory_property(${PROJECT_NAME}_HAS_PARENT PARENT_DIRECTORY)
if(${PROJECT_NAME}_HAS_PARENT)
    list(APPEND ${PROJECT_NAME}_LIBRARIES base)
    if(UNIX)
    list(APPEND ${PROJECT_NAME}_LIBRARIES dl pthread)
    endif()
    set(${PROJECT_NAME}_LIBRARIES ${${PROJECT_NAME}_LIBRARIES} PARENT_SCOPE)
endif()
